@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<!DOCTYPE appendix PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
+"http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+<!ENTITY version "2.4.0">
+<!ENTITY oldversion "2.2">
+]>
+<appendix id="rnnewmaintainers">
+  <title>New Maintainers</title>
+  <para>GNOME &version; marks the arrival of a number of new maintainers since
+  the release of GNOME &oldversion;.</para>
+</appendix>
